<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddStudents">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/student_reg_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:text="@string/reg_student_head"
            android:textAlignment="center"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_fname_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_mname_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_mname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_lname_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/student_gen_spinner"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:entries="@array/genders" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_email_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_phone_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_bday_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_bdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/b_date"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/student_reg_spinner"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:entries="@array/regions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/student_dist_spinner"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:entries="@array/districts" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/student_ward_spinner"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:entries="@array/ward" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_reg_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_reg_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_uname_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_pass_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/student_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_student_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:paddingBottom="15sp"
            android:text="@string/reg_submit_btn" />

    </LinearLayout>
</ScrollView>