<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    tools:context=".AddCourse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/course_reg_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20sp"
            android:text="@string/reg_course_head"
            android:textAlignment="center"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_name_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_code_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_code" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_credits"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_yos_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/course_yos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/y_of_s"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_inst_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/course_inst_spin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/course_cat_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10sp">

            <Spinner
                android:id="@+id/course_cat_spin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/course_cat"
                android:paddingStart="10sp"
                android:paddingEnd="10sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_submit_btn" />

    </LinearLayout>

</ScrollView>